--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -20,7 +20,9 @@
       "@radix-ui/react-dialog": "^1.1.2",
       "@radix-ui/react-dropdown-menu": "^2.1.2",
       "@radix-ui/react-label": "^2.1.0",
+      "@radix-ui/react-popover": "^1.1.2",
       "@radix-ui/react-scroll-area": "^1.2.0",
+      "@radix-ui/react-select": "^2.1.2",
       "@radix-ui/react-separator": "^1.1.0",
       "@radix-ui/react-slot": "^1.1.0",
       "@radix-ui/react-tooltip": "^1.1.3",
@@ -34,6 +36,7 @@
       "react-dom": "19.0.0-rc-02c0e824-20241028",
       "react-hook-form": "^7.53.1",
       "react-icons": "^5.3.0",
+      "react-window": "^1.8.10",
       "tailwind-merge": "^2.5.4",
       "tailwindcss-animate": "^1.0.7",
       "zod": "^3.23.8"
@@ -42,6 +45,7 @@
       "@types/node": "^20",
       "@types/react": "^18",
       "@types/react-dom": "^18",
+      "@types/react-window": "^1.8.8",
       "eslint": "^8",
       "eslint-config-next": "15.0.2",
       "postcss": "^8",
