--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -32,6 +32,7 @@
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.1",
       "cmdk": "^1.0.0",
+      "js-cookie": "^3.0.5",
       "lucide-react": "^0.454.0",
       "next": "15.0.2",
       "next-themes": "^0.3.0",
@@ -45,6 +46,7 @@
       "zod": "^3.23.8"
    },
    "devDependencies": {
+      "@types/js-cookie": "^3.0.6",
       "@types/node": "^20",
       "@types/react": "^18",
       "@types/react-dom": "^18",
