--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -8,6 +8,9 @@
       "start": "next start",
       "lint": "next lint"
    },
+   "overrides": {
+      "react-is": "^19.0.0-rc-69d4b800-20241021"
+   },
    "dependencies": {
       "@emotion/cache": "^11.13.1",
       "@emotion/react": "^11.13.3",
@@ -32,6 +35,7 @@
       "class-variance-authority": "^0.7.0",
       "clsx": "^2.1.1",
       "cmdk": "^1.0.0",
+      "geist": "^1.3.1",
       "js-cookie": "^3.0.5",
       "lucide-react": "^0.454.0",
       "next": "15.0.2",
@@ -41,6 +45,7 @@
       "react-hook-form": "^7.53.1",
       "react-icons": "^5.3.0",
       "react-window": "^1.8.10",
+      "recharts": "^2.13.2",
       "tailwind-merge": "^2.5.4",
       "tailwindcss-animate": "^1.0.7",
       "zod": "^3.23.8"
