--- a/nginx.conf
+++ b/nginx.conf
@@ -7,19 +7,13 @@ http {
         server backend:3001;
     }
 
-    # upstream socket-backend {
-    #     server backend:3002;
-    # }
+    upstream mongodb {
+        server localhost:37017; # Points to the MongoDB container's port on the host
+    }
 
     include       ./mime.types;
     default_type  application/octet-stream;
     
-    # types {
-    #     text/html html;
-    #     text/css css;
-    #     application/javascript js;
-    # }
-
     server {
         listen 80;
         listen [::]:80;
@@ -70,6 +64,18 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
             proxy_set_header Host $host;
             proxy_set_header X-NginX-Proxy true;
+        }
+    }
+
+    server {
+        listen 8080; # Nginx port to access MongoDB; can be any available port
+
+        location /mongo/ {
+            proxy_pass http://mongodb;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
