--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     }
 
     upstream mongodb {
-        server localhost:37017; # Points to the MongoDB container's port on the host
+        server mongodb:27017; # Points to the MongoDB container's port on the host
     }
 
     include       ./mime.types;
