--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,26 @@ events {
 
 }
 
+stream {
+    upstream stream_mongo_backend {
+        server mongodb:27017;  # Route directly to MongoDB container
+    }
+
+    server {
+        listen 27018;  # External port to connect to MongoDB through Nginx
+        proxy_connect_timeout 1s;
+        proxy_timeout 3s;
+        proxy_pass stream_mongo_backend;
+    }
+}
+
 http {
     upstream chani-backend {
         server backend:3001;
     }
 
     upstream mongodb {
-        server mongodb:27017; # Points to the MongoDB container's port on the host
+        server localhost:27017; # Points to the MongoDB container's port on the host
     }
 
     include       ./mime.types;
@@ -66,16 +79,5 @@ http {
             proxy_set_header X-NginX-Proxy true;
         }
     }
-
-    server {
-        listen 8080; # Nginx port to access MongoDB; can be any available port
-
-        location /mongo/ {
-            proxy_pass http://mongodb;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
 }
+
