--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,7 @@ services:
     image: mongo:latest
     container_name: mongodb
     ports:
-      - 37017:27017
+      - 37017:27017 # External port 37017 maps to MongoDB's internal port 27017
     volumes:
       - mongodb-data:/data/db
 
@@ -69,14 +69,16 @@ services:
   nginx:
     container_name: chani-nginx
     image: nginx:alpine
-    # ports:
-    #   - "80:80"
+    ports:
+      # - "80:80"
+      - "27018:27018" # Expose 27018 for MongoDB access
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
+      - mongodb
       - fe-user
       - backend
-      # - fe-admin
+      - fe-admin
 
 volumes:
   redis-data:
