--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,8 @@ services:
     container_name: mongodb
     ports:
       - 37017:27017 # External port 37017 maps to MongoDB's internal port 27017
+    expose:
+      - 27017
     volumes:
       - mongodb-data:/data/db
 
@@ -48,7 +50,7 @@ services:
       context: ./apps/client
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "4000:80"
     expose:
       - 80
     depends_on:
@@ -70,7 +72,7 @@ services:
     container_name: chani-nginx
     image: nginx:alpine
     ports:
-      # - "80:80"
+      - "80:80"
       - "27018:27018" # Expose 27018 for MongoDB access
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
