--- a/nginx.conf
+++ b/nginx.conf
@@ -2,27 +2,27 @@ events {
 
 }
 
-stream {
-    upstream stream_mongo_backend {
-        server mongodb:27017;  # Route directly to MongoDB container
-    }
+# stream {
+#     upstream stream_mongo_backend {
+#         server mongodb:27017;  # Route directly to MongoDB container
+#     }
 
-    server {
-        listen 27018;  # External port to connect to MongoDB through Nginx
-        proxy_connect_timeout 1s;
-        proxy_timeout 3s;
-        proxy_pass stream_mongo_backend;
-    }
-}
+#     server {
+#         listen 27018;  # External port to connect to MongoDB through Nginx
+#         proxy_connect_timeout 1s;
+#         proxy_timeout 3s;
+#         proxy_pass stream_mongo_backend;
+#     }
+# }
 
 http {
     upstream chani-backend {
         server backend:3001;
     }
 
-    upstream mongodb {
-        server localhost:27017; # Points to the MongoDB container's port on the host
-    }
+    # upstream mongodb {
+    #     server localhost:27017; # Points to the MongoDB container's port on the host
+    # }
 
     include       ./mime.types;
     default_type  application/octet-stream;
