--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ events {
 
 http {
     upstream chani-backend {
-        server backend:3001;
+        server server:3001;
     }
 
     # upstream mongodb {
