--- a/nginx.conf
+++ b/nginx.conf
@@ -2,18 +2,18 @@ events {
 
 }
 
-# stream {
-#     upstream stream_mongo_backend {
-#         server mongodb:27017;  # Route directly to MongoDB container
-#     }
+stream {
+    upstream stream_mongo_backend {
+        server mongodb:27017;  # Route directly to MongoDB container
+    }
 
-#     server {
-#         listen 27018;  # External port to connect to MongoDB through Nginx
-#         proxy_connect_timeout 1s;
-#         proxy_timeout 3s;
-#         proxy_pass stream_mongo_backend;
-#     }
-# }
+    server {
+        listen 27018;  # External port to connect to MongoDB through Nginx
+        proxy_connect_timeout 1s;
+        proxy_timeout 3s;
+        proxy_pass stream_mongo_backend;
+    }
+}
 
 http {
     upstream chani-backend {
