--- a/compose.yaml
+++ b/compose.yaml
@@ -30,14 +30,6 @@ services:
     environment:
       - PORT=3001
       - NODE_ENV=development
-      # - POSTGRES_HOST=postgres
-      # - POSTGRES_USER=${POSTGRES_USER}
-      # - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      # - POSTGRES_DB=${POSTGRES_DB}
-      # - REDIS_HOST=redis
-      # - REDIS_PORT=6379
-    # env_file:
-    #   - ./server/.env
     depends_on:
       - redis
       - mongodb
@@ -74,13 +66,11 @@ services:
     ports:
       - "80:80"
       - "27018:27018" # Expose 27018 for MongoDB access
+    expose:
+      - 80
+      - 27018
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - mongodb
-      - fe-user
-      - backend
-      - fe-admin
 
 volumes:
   redis-data:
