--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,13 @@
 # version: "3.7"
 
 services:
-  redis:
-    image: redis:alpine
-    container_name: redis
-    ports:
-      - 6379:6379
-    volumes:
-      - redis-data:/data
+  # redis:
+  #   image: redis:alpine
+  #   container_name: redis
+  #   ports:
+  #     - 6379:6379
+  #   volumes:
+  #     - redis-data:/data
 
   mongodb:
     image: mongo:latest
@@ -19,46 +19,46 @@ services:
     volumes:
       - mongodb-data:/data/db
 
-  backend:
-    container_name: chani-backend
-    build:
-      context: ./server
-      dockerfile: Dockerfile
-    ports:
-      - 3001:3001
-      # - 3002:3002 # Websocket port
-    environment:
-      - PORT=3001
-      - NODE_ENV=development
-    depends_on:
-      - redis
-      - mongodb
-    expose:
-      - 3001
+  # backend:
+  #   container_name: chani-backend
+  #   build:
+  #     context: ./server
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 3001:3001
+  #     # - 3002:3002 # Websocket port
+  #   environment:
+  #     - PORT=3001
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - redis
+  #     - mongodb
+  #   expose:
+  #     - 3001
 
-  fe-user:
-    container_name: "chani-fe-user"
-    build:
-      context: ./apps/client
-      dockerfile: Dockerfile
-    ports:
-      - "4000:80"
-    expose:
-      - 80
-    depends_on:
-      - backend
+  # fe-user:
+  #   container_name: "chani-fe-user"
+  #   build:
+  #     context: ./apps/client
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "4000:80"
+  #   expose:
+  #     - 80
+  #   depends_on:
+  #     - backend
 
-  fe-admin:
-    container_name: chani-fe-admin
-    build:
-      context: ./apps/admin
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    expose:
-      - 3000
-    depends_on:
-      - backend
+  # fe-admin:
+  #   container_name: chani-fe-admin
+  #   build:
+  #     context: ./apps/admin
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3000:3000"
+  #   expose:
+  #     - 3000
+  #   depends_on:
+  #     - backend
 
   nginx:
     container_name: chani-nginx
@@ -66,9 +66,6 @@ services:
     ports:
       - "80:80"
       - "27018:27018" # Expose 27018 for MongoDB access
-    expose:
-      - 80
-      - 27018
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
