--- a/nginx.conf
+++ b/nginx.conf
@@ -16,68 +16,68 @@ events {
 # }
 
 http {
-    # upstream chani-backend {
-    #     server backend:3001;
+    upstream chani-backend {
+        server backend:3001;
+    }
+
+    # upstream mongodb {
+    #     server localhost:27017; # Points to the MongoDB container's port on the host
     # }
 
-    # # upstream mongodb {
-    # #     server localhost:27017; # Points to the MongoDB container's port on the host
-    # # }
-
-    # include       ./mime.types;
-    # default_type  application/octet-stream;
+    include       ./mime.types;
+    default_type  application/octet-stream;
     
-    # server {
-    #     listen 80;
-    #     listen [::]:80;
-    #     server_name admin.chani-store.io.vn;
-    #     root /var/www/html;
-    #     index index.html index.htm index.nginx-debian.html;
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name admin.chani-store.io.vn;
+        root /var/www/html;
+        index index.html index.htm index.nginx-debian.html;
 
-    #     location / {
-    #         proxy_pass http://fe-admin:3000;
+        location / {
+            proxy_pass http://fe-admin:3000;
 
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
 
-    #     location /api/v1/ {
-    #         proxy_pass http://chani-backend;
+        location /api/v1/ {
+            proxy_pass http://chani-backend;
 
-    #         proxy_set_header X-Real-IP $remote_addr; 
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-    #         proxy_set_header Host $host; 
-    #         proxy_set_header X-NginX-Proxy true;
-    #     }
-    # }
+            proxy_set_header X-Real-IP $remote_addr; 
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+            proxy_set_header Host $host; 
+            proxy_set_header X-NginX-Proxy true;
+        }
+    }
     
-    # server {
-    #     listen 80;
-    #     listen [::]:80; # ensures that the server listens on both IPv4 and IPv6 on port 80.
-    #     server_name chani-store.io.vn;
-    #     root /usr/share/nginx/html;
-    #     index index.html index.htm index.nginx-debian.html;
+    server {
+        listen 80;
+        listen [::]:80; # ensures that the server listens on both IPv4 and IPv6 on port 80.
+        server_name chani-store.io.vn;
+        root /usr/share/nginx/html;
+        index index.html index.htm index.nginx-debian.html;
 
-    #     location / {
-    #         proxy_pass http://fe-user:80; 
+        location / {
+            proxy_pass http://fe-user:80; 
             
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr; 
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr; 
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    #     location /api/v1/ {
-    #         proxy_pass http://chani-backend;
+        location /api/v1/ {
+            proxy_pass http://chani-backend;
 
-    #         proxy_set_header X-Real-IP $remote_addr; 
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-NginX-Proxy true;
-    #     }
-    # }
+            proxy_set_header X-Real-IP $remote_addr; 
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+            proxy_set_header Host $host;
+            proxy_set_header X-NginX-Proxy true;
+        }
+    }
 }
 
