--- a/compose.yaml
+++ b/compose.yaml
@@ -33,7 +33,7 @@ services:
       - NODE_ENV=development
     depends_on:
       - redis
-      - mongodb
+      # - mongodb
     expose:
       - 3001
 
