--- a/apps/client/nginx.conf
+++ b/apps/client/nginx.conf
@@ -1,37 +1,39 @@
 events {
-
 }
 
 http {
-
     include       ./mime.types;
     default_type  application/octet-stream;
-    
+
     types {
         text/html html;
         text/css css;
         application/javascript js;
     }
 
-    
     server {
         listen       80;
         listen  [::]:80;
         server_name  localhost;
 
+        # Serve static files directly
+        location /static/ {
+            root /usr/share/nginx/html;
+            expires max; # Cache static files
+            access_log off;
+        }
+
+        # Fallback for SPA routes
         location / {
             root   /usr/share/nginx/html;
-            index  index.html index.htm;
-
+            index  index.html;
             try_files $uri /index.html;
         }
 
+        # Custom error page
         error_page   500 502 503 504  /50x.html;
-        
         location = /50x.html {
             root   /usr/share/nginx/html;
         }
     }
-
-    
 }
