--- a/nginx.conf
+++ b/nginx.conf
@@ -27,32 +27,32 @@ http {
     include       ./mime.types;
     default_type  application/octet-stream;
     
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name admin.chani-store.io.vn;
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
+    # server {
+    #     listen 80;
+    #     listen [::]:80;
+    #     server_name admin.chani-store.io.vn;
+    #     root /var/www/html;
+    #     index index.html index.htm index.nginx-debian.html;
 
-        location / {
-            proxy_pass http://fe-admin:3000;
+    #     location / {
+    #         proxy_pass http://fe-admin:3000;
 
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
 
 
-        location /api/v1/ {
-            proxy_pass http://chani-backend;
+    #     location /api/v1/ {
+    #         proxy_pass http://chani-backend;
 
-            proxy_set_header X-Real-IP $remote_addr; 
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-            proxy_set_header Host $host; 
-            proxy_set_header X-NginX-Proxy true;
-        }
-    }
+    #         proxy_set_header X-Real-IP $remote_addr; 
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+    #         proxy_set_header Host $host; 
+    #         proxy_set_header X-NginX-Proxy true;
+    #     }
+    # }
     
     server {
         listen 80;
