--- a/apps/client/nginx.conf
+++ b/apps/client/nginx.conf
@@ -20,11 +20,17 @@ http {
         server_name  localhost;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-
+            root /usr/share/nginx/html;
+            index index.html;
             try_files $uri /index.html;
         }
+
+        location /static/ {
+            root /usr/share/nginx/html;
+            expires max;
+            access_log off;
+        }
+
 
         error_page   500 502 503 504  /50x.html;
         
