--- a/apps/client/nginx.conf
+++ b/apps/client/nginx.conf
@@ -20,8 +20,9 @@ http {
         server_name  localhost;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+
             try_files $uri /index.html;
         }
 
