--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@
 services:
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: chani-redis
     ports:
       - 6379:6379
     volumes:
