--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,11 @@ http {
         location / {
             proxy_pass http://fe-admin:3000;
 
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            send_timeout 60s;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -46,6 +51,11 @@ http {
 
         location /api/v1/ {
             proxy_pass http://chani-backend;
+
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            send_timeout 60s;
 
             proxy_set_header X-Real-IP $remote_addr; 
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
@@ -64,18 +74,28 @@ http {
         location / {
             proxy_pass http://fe-user:80; 
             
-            proxy_set_header Host $host;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            send_timeout 60s;
+
             proxy_set_header X-Real-IP $remote_addr; 
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+            proxy_set_header Host $host; 
+            proxy_set_header X-NginX-Proxy true;
         }
 
         location /api/v1/ {
             proxy_pass http://chani-backend;
 
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            send_timeout 60s;
+
             proxy_set_header X-Real-IP $remote_addr; 
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
-            proxy_set_header Host $host;
+            proxy_set_header Host $host; 
             proxy_set_header X-NginX-Proxy true;
         }
     }
